--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,23 +1,32 @@
-name: Python CI
+name: Python Application Test Workflow
 
 on: [push]
 
 jobs:
-  build:
-
+  build-and-test:
     runs-on: ubuntu-latest
+    
+    services:
+      mongodb:
+        image: mongo
+        ports:
+          - 27017:27017
 
     steps:
     - uses: actions/checkout@v2
+    
     - name: Set up Python
       uses: actions/setup-python@v2
       with:
-        python-version: '3.8'
+        python-version: '3.8'  # or any version you're using
+    
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
-    - name: Run tests
-      run: |
-        echo "Running tests"
+        pip install -r requirements.txt  # Make sure you have a requirements.txt
 
+    - name: Run tests
+      env:
+        MONGODB_URL: mongodb://localhost:27017/test_db  # Adjust the DB URL if necessary
+      run: |
+        python -m pytest
