--- a/pytest.ini
+++ b/pytest.ini
@@ -1,3 +1,5 @@
-; [pytest]
-; filterwarnings =
-;     ignore:pkg_resources is deprecated as an API:DeprecationWarning
+[pytest]
+filterwarnings =
+    ignore:pkg_resources is deprecated as an API:DeprecationWarning
+    ignore:pkg_resources is deprecated:DeprecationWarning
+    ignore:Deprecated call to `pkg_resources.declare_namespace:DeprecationWarning
